projects/rhodes.akn/dist/infrastructure/kubernetes/cilium/admissionregistration.k8s.io.v1.ValidatingAdmissionPolicyBinding.safe-upgrades.gateway.networking.k8s.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  annotations:
    gateway.networking.k8s.io/bundle-version: v1.5.0-dev
    gateway.networking.k8s.io/channel: standard
  name: safe-upgrades.gateway.networking.k8s.io
spec:
  matchResources:
    resourceRules:
    - apiGroups:
      - apiextensions.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - customresourcedefinitions
  policyName: safe-upgrades.gateway.networking.k8s.io
  validationActions:
  - Deny
